syntax = 'proto3';

package TestPipes;

message TestRequest {
}

message TestResponse {
}

service TestService {
	rpc TestMethod(TestRequest) returns (TestResponse) {}
	rpc TestStreamingMethod(TestRequest) returns (stream TestResponse) {}
}